# PaperwithAgent

./: .gitignore  CLAUDE.md  README.md  README.zh.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.renderer.config.ts  vite.tauri.config.ts
.github/workflows/: ci.yml  pages.yml  release-guard.yml  release.yml
docs/superpowers/plans/: 2026-04-29-spec-a-storage-backend-and-library-chooser.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  oauth_cmd.rs
src/main/: index.ts
src/main/__tests__/: library.integration.test.ts  zip.test.ts
src/main/agent/: auth.ts  config.ts  loop.ts  newTools.ts  prompt.ts  session.ts  tools.ts
src/main/agent/tools/: documents.ts  web.ts
src/main/ipc/: agent.ts  libraries.ts  papers.ts
src/main/paperdb/: csv.ts  manager.ts  schema.ts  store.ts  zip.ts
src/preload/: index.ts
src/renderer/src/: App.tsx  css.d.ts
src/renderer/src/components/common/: TitleBar.tsx
src/renderer/src/desktop/: desktopApi.ts  desktopTools.ts  shellApi.ts
src/renderer/src/lib/: i18n.ts  ipc.ts  libraryFacade.ts  providerBuild.ts  utils.ts
src/renderer/src/locales/: en.json  zh.json
src/renderer/src/store/: agent.ts  library.ts  ui.ts
src/renderer/src/styles/: globals.css
src/renderer/src/tauri/: tauriShell.ts  tauriStubApi.ts
src/renderer/src/web/: credentials.ts  s3client.ts  webAgent.ts  webApi.ts  webLibrary.ts  webTools.ts
src/shared/: presets.ts  providers.ts  types.ts
src/shared/agent/: agent.ts  loop.ts  prompt.ts  wireLog.ts
src/shared/agent/providers/: anthropic.ts  openai.ts
src/shared/agent/tools/: index.ts  paperTools.ts
src/shared/oauth/: codex.ts
src/shared/paperdb/: store.ts
src/shared/paperdb/__tests__/: library.integration.test.ts  schema.test.ts
(+19 files in other folders)
