[package]
name = "verko"
version = "0.4.0"
description = "Agent-first paper management. CSV + Markdown native storage."
authors = ["CatVinci-Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "verko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
